# Digital-Form-with-GPT4-Vision-API

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: static.yml
ai-json-form/: .env.development  .env.github-page  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
ai-json-form/nginx/: nginx.conf  proxy_common.conf
ai-json-form/src/: App.vue  ajvVueForm.js  axios.js  codeMirror.js  configs.js  handler.js  main.js  openai.js  pdf.js  prompt.js  schema.js
ai-json-form/src/assets/: main.css
ai-json-form/src/handler/: base.js  frontendHandler.js  index.js  socketHandler.js
ai-json-form/src/handler/frontend/: frontendHandler.js  openai.js  pdf.js  prompt.js  promptTemplate.md
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  ai_helper.py  example.yml  mock.txt  socket.py  utils.py
