[tool.poetry]
name = "ai-json-form-backend"
version = "1.1.0"
description = ""
authors = ["Nathan <t13762@ms3.sltung.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
eventlet = "^0.33.3"
gunicorn = "^21.2.0"
openai = "^1.79.0"
pdf2image = "^1.16.3"
apiflask = "^2.0.2"
pypdf = "^3.17.1"
dnspython = "2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
